gcc/testsuite/rust/rustc/ui/generator/too-many-parameters.rs
#![feature(generators)]

fn main() {
    |(), ()| {
// { dg-error ".E0628." "" { target *-*-* } .-1 }
        yield;
    };
}

